--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<form class="form-horizontal" id="login-form" ng-submit="submitForm()">
+			<form class="form-horizontal" id="login-form">
 				<legend>Please, enter login and password</legend>
 				<div class="control-group controls-box">
 					<label class="control-label" for="input-login">Login</label>
@@ -15,7 +15,6 @@
 						<input type="password" placeholder="Enter password" id="input-pas" ng-model="password"/>
 					</div>
 				</div>
-				<input type="submit" class="btn" value="Log in"/>
 			</form>
 		</div>
 	</div>
