--- a/app/index.html
+++ b/app/index.html
@@ -23,8 +23,8 @@
 		<div class="col-md-12">
 			<div class="control-group controls-box">
 				<div class="controls btn-container" ng-controller="ControllerBase">
-					<a class="btn" ui-sref="list" ng-hide="false">Log in</a>
-					<a class="btn" ui-sref="logout" ng-show="false">Log out</a>
+					<button type="submit" class="btn btn-primary" ng-hide="false">Log in</button>
+					<button type="submit" class="btn btn-primary" ng-show="false">Log out</button>
 				</div>
 			</div>
 		</div>
