--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,19 +1,14 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<form class="form-horizontal" id="login-form">
-				<legend>Please, enter login and password</legend>
-				<div class="control-group controls-box">
-					<label class="control-label" for="input-login">Login</label>
-					<div class="controls input-box">
-						<input type="text" placeholder="Enter login" id="input-login" ng-model="login"/>
-					</div>
+			<form name="form" role="form">
+				<div class="form-group form-inline">
+					<label for="login">Login</label>
+					<input type="text" name="login" id="login" class="form-control" ng-model="login" required />
 				</div>
-				<div class="control-group controls-box">
-					<label class="control-label" for="input-pas">Password</label>
-					<div class="controls input-box">
-						<input type="password" placeholder="Enter password" id="input-pas" ng-model="password"/>
-					</div>
+				<div class="form-group form-inline">
+					<label for="password">Password</label>
+					<input type="password" name="password" id="password" class="form-control" ng-model="password" required />
 				</div>
 			</form>
 		</div>
