--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="videoApp">
+<html ng-app="app">
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Angular CDP</title>
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" href="css/style.css"/>
 	<script src="../bower_components/angular/angular.js"></script>
 	<script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/controller.js"></script>
+	<script src="app.js"></script>
+	<script src="login/service_login.js"></script>
+	<script src="head/Controller.js"></script>
 	<script src="login/Controller_login.js"></script>
 	<script src="video-list/Controller_video_list.js"></script>
 </head>
@@ -22,9 +23,8 @@
 		</div>
 		<div class="col-md-12">
 			<div class="control-group controls-box">
-				<div class="controls btn-container" ng-controller="ControllerBase">
-					<button type="submit" class="btn btn-primary" ng-hide="false">Log in</button>
-					<button type="submit" class="btn btn-primary" ng-show="false">Log out</button>
+				<div class="controls btn-container" ng-controller="controllerBase">
+					<button type="submit" class="btn btn-primary" ng-show="isLogin()" ng-click="logout()">Log out</button>
 				</div>
 			</div>
 		</div>
