--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,7 +1,8 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<form name="form" role="form">
+			<span class="alert alert-danger" ng-show="isInvalid()">Login: "test", password: "test"</span>
+			<form name="form" role="form" id="form"  ng-submit="onLogin()">
 				<div class="form-group form-inline">
 					<label for="login">Login</label>
 					<input type="text" name="login" id="login" class="form-control" ng-model="login" required />
@@ -9,6 +10,9 @@
 				<div class="form-group form-inline">
 					<label for="password">Password</label>
 					<input type="password" name="password" id="password" class="form-control" ng-model="password" required />
+				</div>
+				<div class="form-actions">
+					<button type="submit" class="btn btn-primary">Log in</button>
 				</div>
 			</form>
 		</div>
