--- a/app/index.html
+++ b/app/index.html
@@ -9,9 +9,10 @@
 	<script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="app.js"></script>
 	<script src="login/service_login.js"></script>
+	<script src="todo-list/service_todo.js"></script>
 	<script src="head/Controller.js"></script>
 	<script src="login/Controller_login.js"></script>
-	<script src="video-list/Controller_video_list.js"></script>
+	<script src="todo-list/Controller_todo_list.js"></script>
 </head>
 <body>
 
@@ -19,7 +20,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<a href="#" class="logo"><img src="img/logo.jpg" alt="logo"/></a>
-			<h1>Welcome to video catalog</h1>
+			<h1>Welcome to ToDo list</h1>
 		</div>
 		<div class="col-md-12">
 			<div class="control-group controls-box">
