--- a/app/login/login.html
+++ b/app/login/login.html
@@ -5,11 +5,11 @@
 			<form name="form" role="form" id="form"  ng-submit="onLogin()">
 				<div class="form-group form-inline">
 					<label for="login">Login</label>
-					<input type="text" name="login" id="login" class="form-control" ng-model="login" required />
+					<input type="text" name="login" id="login" class="form-control" ng-model="login" required placeholder="test"/>
 				</div>
 				<div class="form-group form-inline">
 					<label for="password">Password</label>
-					<input type="password" name="password" id="password" class="form-control" ng-model="password" required />
+					<input type="password" name="password" id="password" class="form-control" ng-model="password" required placeholder="test"/>
 				</div>
 				<div class="form-actions">
 					<button type="submit" class="btn btn-primary">Log in</button>
