--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/style.css"/>
 	<script src="../bower_components/angular/angular.js"></script>
 	<script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="../bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
 	<script src="app.js"></script>
 	<script src="login/service_login.js"></script>
 	<script src="todo-list/service_todo.js"></script>
