Implement unit tests

--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-12">
-			<a href="#" class="logo"><img src="img/logo.jpg" alt="logo"/></a>
+		<div class="col-md-12" style="overflow: hidden">
+			<a href="#" class="logo"><img src="img/logo.png" alt="logo"/></a>
 			<h1>Welcome to ToDo list</h1>
 		</div>
 		<div class="col-md-12">
