--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-			<span class="alert alert-danger" ng-show="isInvalid()">Login: "test", password: "test"</span>
+			<span class="alert alert-danger" ng-show="isInvalid()" style="display: inline-block">Login: "test", password: "test"</span>
 			<form name="form" role="form" id="form"  ng-submit="onLogin()">
 				<div class="form-group form-inline">
 					<label for="login">Login</label>
