Refactoring login / logout

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-12" style="overflow: hidden">
+		<div class="col-md-12 header">
 			<a href="#" class="logo"><img src="img/logo.png" alt="logo"/></a>
 			<h1>Welcome to ToDo list</h1>
 		</div>
@@ -33,7 +33,7 @@
 	</div>
 </div>
 
-<div ui-view></div>
+<div ui-view class="view"></div>
 
 <div class="container-fluid">
 	<div class="row">
