--- a/app/login/login.html
+++ b/app/login/login.html
@@ -3,11 +3,11 @@
 		<div class="col-md-12">
 			<span class="alert alert-danger" ng-show="isInvalid()" style="display: inline-block">Login: "test", password: "test"</span>
 			<form name="form" role="form" id="form"  ng-submit="onLogin()">
-				<div class="form-group form-inline">
+				<div class="form-group form-inline" ng-hide="isLogin()">
 					<label for="login">Login</label>
 					<input type="text" name="login" id="login" class="form-control" ng-model="login" required placeholder="test"/>
 				</div>
-				<div class="form-group form-inline">
+				<div class="form-group form-inline" ng-hide="isLogin()">
 					<label for="password">Password</label>
 					<input type="password" name="password" id="password" class="form-control" ng-model="password" required placeholder="test"/>
 				</div>
