--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,8 @@
 		</div>
 		<div class="col-md-12">
 			<div class="control-group controls-box">
-				<div class="controls btn-container" ng-controller="controllerBase">
-					<button type="submit" class="btn btn-primary" ng-show="isLogin()" ng-click="logout()">Log out</button>
+				<div class="controls btn-container" ng-controller="controllerBase as vm">
+					<button type="submit" class="btn btn-primary" ng-show="vm.isLogin()" ng-click="vm.logout()">Log out</button>
 				</div>
 			</div>
 		</div>
