--- a/app/login/login.html
+++ b/app/login/login.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<span class="alert alert-danger" ng-show="isInvalid()" style="display: inline-block">Login: "test", password: "test"</span>
-			<form name="form" role="form" id="form"  ng-submit="onLogin()">
+			<form name="form" role="form" id="form">
 				<div class="form-group form-inline" ng-hide="isLogin()">
 					<label for="login">Login</label>
 					<input type="text" name="login" id="login" class="form-control" ng-model="login" required placeholder="test"/>
@@ -12,7 +12,7 @@
 					<input type="password" name="password" id="password" class="form-control" ng-model="password" required placeholder="test"/>
 				</div>
 				<div class="form-actions">
-					<button type="submit" class="btn btn-primary">Log in</button>
+					<button type="submit" class="btn btn-primary" ng-click="onLogin()">Log in</button>
 				</div>
 			</form>
 		</div>
